# manipulator-control-tutorial

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE-docs  README.en.md  README.md  SIMULATOR_DEVELOPMENT_SPEC.md  START_HERE.cmd  START_HERE.command  THIRD_PARTY_NOTICES.md  pyproject.toml  run_all.ps1  run_all_batches.cmd  run_batch_lab01.cmd  run_batch_lab02.cmd  run_batch_lab03.cmd  run_batch_lab04.cmd  run_batch_lab04_cartesian.cmd  run_lab01.cmd  run_lab01_interactive.cmd  run_lab02.cmd  run_lab02_interactive.cmd  run_lab03.cmd  run_lab03_condition_dls_interactive.cmd  run_lab03_dls_interactive.cmd  run_lab03_interactive.cmd  run_lab04.cmd  run_lab04_cartesian_interactive.cmd  run_lab04_interactive.cmd  run_lab04_wall_interactive.cmd  run_mclab.cmd
.agents/: AGENT_SYSTEM_REVIEW.md  COMPRESSION_PASS_PLAN.md  CURRENT_STATE.md  DERIVATION_COMPLETENESS_PLAN.md  DESKTOP_APP_BUGFIX_20260720.md  HANDOFF_TEMPLATE.md  MISSION.md  OPERATING_SYSTEM.md  PAPER_SIM_MATURITY_ASSESSMENT.md  PAPER_VERSION_LOG.md  PORTFOLIO_PACKAGE.md  READINESS_EXECUTION_PLAN.md  ROBOTICS_FOUNDATIONS_COMPLETION_AUDIT.md  ROBOTICS_FOUNDATIONS_PLAN.md  ROBOTICS_FOUNDATIONS_TRACEABILITY.md  SIM_UX_FIDELITY_ASSESSMENT.md  SUBMISSION_PLAN.md  USER_ACTIONS.md  UX_IMPROVEMENTS.md  VALIDATION_METRICS.yaml  VENUE_SEARCH.md
.agents/archive/: CURRENT_STATE_ARCHIVE_20260704.md  CURRENT_STATE_ARCHIVE_20260722_9eb8eb19.md  VALIDATION_METRICS_HISTORY.yaml
.agents/baselines/: B1-newcomer-baseline.md  B2-safe-main-declaration.json  B2-safe-main-declaration.md  B2-safe-main.json  B2-safe-main.md  COMP-01-completion-contract.md  COMP-02-completion-consumers.md  DOC-01-readme-contract.md  GOV-01-governance.md  MAINT-01A-mypy-debt-v1.json  MAINT-01A-mypy-debt-v2.json  SAFE-01-cleanup.md
.agents/decisions/: IA-00-launcher-paths.md
.agents/operations/: local-data-policy.json  local-data-policy.schema.json  local-data-policy.sources.json
.agents/reviews/: 20260706_m4_reviewer_a_euler2.md  20260706_m4_reviewer_b_fourier.md  20260706_m4_reviewer_c_lagrange.md  20260706_m4_reviewer_d_kepler.md  20260720_enterprise_readiness_audit.md  20260720_enterprise_readiness_finding_status.md
.agents/supply_chain/: license-corpus-import-v1.json  license-inventory.json  license-inventory.schema.json  license-review-inputs-v1.json  license-review-v1.json  license-review-v1.schema.json  python-license-evidence.schema.json  sbom-inputs.schema.json  vulnerability-waivers.json
.agents/validation/: check_asset_supply_chain.py  check_citation_coverage.py  check_dependency_locks.py  check_educator_kit.py  check_license_inventory.py  check_license_review.py  check_local_data_policy.py  check_mypy_baseline.py  check_readme_contract.py  check_supply_chain_policy.py  check_workflow_action_pins.py  robotics_foundations_validation_summary.yaml  validate_robotics_foundations.py  workflow-check-requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  actions-lock.json  dependabot.yml
.github/workflows/: ci.yml  desktop.yml
configs/lab01_msd/: default.yaml  f2_launch_high_energy.yaml  f2_launch_precheck.yaml  high_stiffness.yaml  interactive_pull.yaml  low_stiffness.yaml  over_damped.yaml  underdamped.yaml
configs/lab02_pid/: control_delay.yaml  default.yaml  interactive_disturbance.yaml  measurement_noise.yaml  p_high_gain.yaml  p_low_gain.yaml  pd_damped.yaml  pid_anti_windup.yaml  pid_with_windup.yaml  saturation_limit.yaml
configs/lab03_2dof/: condition_aware_dls_2dof.yaml  condition_aware_dls_adaptive_speed_retarget_2dof.yaml  condition_aware_dls_direct_retarget_2dof.yaml  condition_aware_dls_early_2dof.yaml  condition_aware_dls_edge_target_2dof.yaml  condition_aware_dls_elbow_disturbance_2dof.yaml  condition_aware_dls_fast_command_2dof.yaml  condition_aware_dls_fixed_speed_retarget_2dof.yaml  condition_aware_dls_high_joint_speed_2dof.yaml  condition_aware_dls_high_torque_2dof.yaml  condition_aware_dls_inner_target_2dof.yaml  default.yaml  s_curve.yaml  (+17 more)
docs/: README.md  developer_guide.md  educator_guide.md  educator_kit.json  educator_kit.schema.json  educator_pilot_protocol.md  installation.md  lab01_mass_spring_damper.md  lab02_pid_control.md  lab03_trajectory_planning.md  lab04_panda_manipulator.md  learner_guide.md  local_data_and_privacy.md  repository_structure.md  troubleshooting.md  ui_validation.md
jose/: paper.bib  paper.md
outreach/: blog_failure_gallery_en.md  blog_failure_gallery_ko.md
packaging/: entrypoint.py  mclab.spec
paper/: README.md  main.tex
requirements/: build.in
scripts/: audit_app_startup.py  audit_course_comparison.py  audit_desktop_ui.py  audit_package_e2e.py  audit_package_startup.py  audit_report_ui.py  audit_scene_semantics.py  audit_supply_chain.py  bootstrap_and_run.py  build_desktop.py  build_static_fonts.py  generate_license_inventory.py  generate_license_review.py  generate_sbom_inputs.py  import_license_corpus.py  install_locked.py  install_ubuntu_system_packages.py  lock_requirements.py  manage_dependency_locks.py  start_mclab.py
tests/: test_application.py  test_asset_supply_chain.py  test_assets.py  test_batch.py  test_batch_lifecycle.py  test_bootstrap_and_run.py  test_build_desktop.py  test_cli_imports.py  test_completion.py  test_completion_batches.py  test_completion_cli_snapshot.py  test_completion_inventory.py  test_completion_publication.py  test_completion_reporting.py  test_completion_surface_parity.py  test_config_loads.py  test_course_progress.py  test_dependency_locks.py  test_desktop_presets.py  test_direct_artifact_record.py  test_doctor.py  test_educator_kit.py  test_fonts.py  test_install_locked.py  test_interaction.py  test_lab04_wall.py  test_lab_smoke.py  test_launch_scripts.py  test_learner_menu.py  test_learner_menu_completion.py  test_learning_guides.py  test_license_corpus_import.py  test_license_inventory_contract.py  test_license_review_contract.py  test_local_data_policy.py  test_logging.py  test_manage_dependency_locks.py  test_manifest_integrity.py  test_models_xml.py  test_mujoco_utils.py  (+18 more)
(+306 files in other folders)
