[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-manipulator-control-lab"
version = "0.1.0"
description = "Local-first MuJoCo labs for educational robot control experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "MuJoCo Manipulator Control Lab Contributors" }
]
dependencies = [
  "mujoco",
  "numpy",
  "matplotlib",
  "pyyaml",
]

[project.optional-dependencies]
app = [
  "PySide6-Essentials==6.11.1",
]
dev = [
  "axe-playwright-python==0.1.7",
  "playwright==1.61.0",
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]
package = [
  "pyinstaller>=6.15,<7",
]

[project.scripts]
mclab = "mclab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mclab = ["application/qml/*.qml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
