[build-system]
requires = ["setuptools==83.0.0", "wheel==0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-manipulator-control-lab"
version = "0.1.0"
description = "Local-first MuJoCo labs for educational robot control experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "MuJoCo Manipulator Control Lab Contributors" }
]
dependencies = [
  "mujoco==3.10.0",
  "numpy==2.2.6",
  "matplotlib==3.10.9",
  "pyyaml==6.0.3",
]

[project.optional-dependencies]
app = [
  "PySide6-Essentials==6.11.1",
]
dev = [
  "axe-playwright-python==0.1.7",
  "playwright==1.61.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
  "mypy==2.3.0",
]
package = [
  "pyinstaller==6.21.0",
]

[project.scripts]
mclab = "mclab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mclab = ["application/qml/*.qml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
# Qt binding/factory modules are exercised by the cross-platform desktop
# workflow. Win32 handle primitives are covered by that same three-OS gate.
# The main simulator coverage gate measures dependency-light code.
omit = [
  "src/mclab/output_windows.py",
  "src/mclab/application/qt_app.py",
  "src/mclab/application/qt_batch.py",
  "src/mclab/application/qt_evidence.py",
  "src/mclab/application/qt_frame.py",
  "src/mclab/application/qt_smoke.py",
  "src/mclab/application/qt_worker.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
environments = [
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
required-environments = [
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'win32' and platform_machine == 'AMD64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "implementation_name == 'cpython' and python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.11' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and python_version == '3.12' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
